# snake_game

./: pyproject.toml
src/: functions.py  index.html  main.py
src/static/: script.js  style.css
